@startuml
skinparam classAttributeIconSize 0

class SKU {
  +sku_id: str
  +rot: float
  +height: float
  +volume: float
  +weight: float
  +cycle_units: float
  +avg_units_per_line: float
}

class Order {
  +order_id: str
  +sku_ids: list[str]
}

class Tray {
  +tray_id: str
  +group_id: str
  +subgroup_id: str
  +height: float
  +max_area: float
  +max_weight: float
  +area_used: float
  +weight_used: float
}

class TrayItem {
  +sku_id: str
  +units: float
  +unit_volume: float
  +unit_weight: float
  +total_volume: float
  +total_weight: float
  +unit_area: float
  +total_area: float
}

class VLM {
  +vlm_id: str
  +capacity: float
  +load: float
}

class GroupAllocation {
  +group_id: str
  +vlm_ids: list[str]
  +replication_split: list[float]
}

class TrayAssignment {
  +tray_id: str
  +vlm_id: str
  +group_id: str
}

class MicroSlottingConfig {
  +cycle_days: float
  +graph_top_k_neighbors: int
  +graph_aff_min: float
  +affinity_metric: AffinityMetric
  +affinity_scorer: AffinityScorer
  +candidate_selector: CandidateSelector
  +group_seed_count: int
  +group_min_delta: float
  +group_max_size: int
  +group_score_wa: float
  +group_score_wr: float
  +group_score_wh: float
  +group_height_ref: float
  +group_height_p: float
  +subgroup_max_size: int
  +subgroup_size_gamma: float
  +subgroup_size_p: int
  +subgroup_height_weight: float
  +subgroup_seed_pairs_cap: int
  +subgroup_candidate_eval_cap: int
  +subgroup_allow_singleton: bool
  +subgroup_singleton_strategy: str
  +unassigned_height_delta_max: float
  +unassigned_include: bool
  +tray_base_area_max: float
  +tray_weight_max: float
  +tray_op_void: float
}

class AffinityMetric
class AffinityScorer
class CandidateSelector

class AffinityNeighbor {
  +sku_id: str
  +affinity: float
}

class AffinityGroup {
  +seed_sku_id: str
  +sku_ids: list[str]
  +score: float
}

class Subgroup {
  +subgroup_id: str
  +group_id: str
  +sku_ids: list[str]
  +score: float
}

class TrayPlan {
  +group_id: str
  +subgroups: list[Subgroup]
  +trays: list[Tray]
}

Order "*" -- "*" SKU : contains
AffinityGroup "*" -- "*" SKU : groups
Subgroup "*" -- "*" SKU : subgroups
AffinityNeighbor "*" -- "1" SKU : neighbor
Tray "1" -- "*" TrayItem : contains

@enduml
